--- a/pranie-tapicerki.html
+++ b/pranie-tapicerki.html
@@ -20,12 +20,13 @@
 
 <section class="section">
   <h2>Pranie tapicerek</h2>
-  <p>
-Głębokie pranie tapicerki materiałowej i skórzanej
-z usuwaniem zabrudzeń i zapachów.
 
+<div class="image-text-section">
+    <img src="img/zdjecia/przed1.png" alt="Obrazek 1">
+    <div class="middle-text">Profesjonalne pranie tapicerki samochodowej przy użyciu specjalistycznych detergentów i technologii ekstrakcyjnej. Skutecznie usuwamy plamy, zabrudzenia i nieprzyjemne zapachy, przywracając materiałom świeżość i naturalny wygląd. Zabieg kończymy impregnacją tkanin lub skóry, zapewniając wnętrzu luksusowy wygląd i ochronę na dłużej.</div>
+    <img src="img/zdjecia/po1.jpeg" alt="Obrazek 2">
+  </div>
 
-  </p>
 </section>
 
 </body>
@@ -132,5 +133,6 @@ z usuwaniem zabrudzeń i zapachów.
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
