--- a/pranie-tapicerki.html
+++ b/pranie-tapicerki.html
@@ -90,7 +90,7 @@
   <div class="contact-container">
     <div class="contact-info">
       <h3>Masz pytania?</h3>
-      <p class="contact-desc">Zadzwoń lub odwiedź nas w naszym studiu w Wejherowie.</p>
+      <p class="contact-desc">Zadzwoń lub odwiedź nas w naszym studiu.</p>
       
       <div class="contact-details">
         <div class="detail-item">
@@ -133,6 +133,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
