--- a/przeglad-powloki.html
+++ b/przeglad-powloki.html
@@ -21,13 +21,27 @@
 
 <section class="section">
   <h2>Przegląd powłoki ceramicznej</h2>
-  <p>
-    Kontrola stanu powłoki ceramicznej
-oraz jej odświeżenie i zabezpieczenie.
-  </p>
+
+<div class="image-text-section">
+    <img src="img/zdjecia/przed1.png" alt="Obrazek 1">
+    <div class="middle-text">Kompleksowa kontrola stanu powłoki ochronnej auta połączona z jej oczyszczeniem przy użyciu profesjonalnej chemii. Sprawdzamy integralność warstwy ochronnej, ewentualne ubytki i poziom połysku, zapewniając lakierowi perfekcyjny wygląd i głębię koloru. Zabieg powinien być wykonywany regularnie, w zależności od eksploatacji samochodu, aby utrzymać długotrwałą ochronę.</div>
+    <img src="img/zdjecia/po1.jpeg" alt="Obrazek 2">
+  </div>
+
 </section>
 
 
+
+
+
+  
+
+
+
+
+
+
+  
 </body>
 </html>
 
@@ -151,5 +165,6 @@ oraz jej odświeżenie i zabezpieczenie.
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
