--- a/prania-polering.html
+++ b/prania-polering.html
@@ -21,11 +21,13 @@
 
 <section class="section">
   <h2>Prania, polerowania i powłoki</h2>
-  <p>
-    Kompleksowe pranie wnętrza, profesjonalne polerowanie lakieru
-    oraz aplikacja powłok ochronnych zwiększających połysk
-    i zabezpieczających powierzchnię pojazdu.
-  </p>
+
+<div class="image-text-section">
+    <img src="img/zdjecia/przed1.png" alt="Obrazek 1">
+    <div class="middle-text">Profesjonalne polerowanie lakieru, korekta przy zastosowaniu nowoczesnych środków oraz narzędzi usuwa mikrozarysowania, hologramy, odpryski oraz głębsze zarysowania, przywracając głębię koloru i perfekcyjny połysk. Po każdym polerowaniu nakładany jest wosk ochronny, który dodatkowo zabezpiecza lakier. Opcjonalnie usługę można połączyć z nałożeniem powłoki ochronnej w zależności od wymagań klienta. Oferujemy powłoki ochronne o trwałości od 6 miesięcy do 5 lat, różnego rodzaju – od ceramicznych do elastomerowych, jak również woski o różnej twardości i wytrzymałości, zapewniające elegancki wygląd i długotrwałą ochronę lakieru.</div>
+    <img src="img/zdjecia/po1.jpeg" alt="Obrazek 2">
+  </div>
+
 </section>
 
 
@@ -135,5 +137,6 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
