--- a/folie-ppf.html
+++ b/folie-ppf.html
@@ -21,11 +21,13 @@
 
 <section class="section">
   <h2>Folie ochronne PPF</h2>
-  <p>
- Profesjonalna aplikacja folii PPF
-chroniącej lakier przed uszkodzeniami.
 
-  </p>
+<div class="image-text-section">
+    <img src="img/zdjecia/przed1.png" alt="Obrazek 1">
+    <div class="middle-text">Profesjonalne zabezpieczenie lakieru bezbarwną folią ochronną (PPF – Paint Protection Film), chroniącą przed odpryskami, zarysowaniami i drobnymi uszkodzeniami mechanicznymi. Folia przywraca głębię koloru i połysk, zachowując naturalny wygląd auta. Usługę można zastosować nie tylko na karoserii, ale także na reflektorach, klamkach, lusterkach i innych elementach narażonych na uszkodzenia. Opcjonalnie folię można połączyć z powłokami ochronnymi lub woskami, aby maksymalnie wydłużyć ochronę lakieru i utrzymać luksusowy efekt wizualny.</div>
+    <img src="img/zdjecia/po1.jpeg" alt="Obrazek 2">
+  </div>
+
 </section>
 
 </body>
@@ -136,6 +138,7 @@ chroniącej lakier przed uszkodzeniami.
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
