--- a/pranie-tapicerki.html
+++ b/pranie-tapicerki.html
@@ -8,6 +8,11 @@
 </head>
 <body>
 
+
+   <!-- Elfsight Click to Call | Untitled Click to Call -->
+<script src="https://elfsightcdn.com/platform.js" async></script>
+<div class="elfsight-app-e92da913-d54a-4403-8ba2-9a2f6c8c2d5d" data-elfsight-app-lazy></div>
+
 <header class="header">
   <img src="img/logo.jpeg" class="logo" alt="Detailing Premium">
 
@@ -133,6 +138,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
