--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <a href="#oferta">OFERTA</a>
     <a href="#galeria">GALERIA</a>
     <a href="#kontakt">KONTAKT</a>
-    <a href="#kontakt">OPINIE</a>
+    <a href="#opinie">OPINIE</a>
   </nav>
 </header>
 
@@ -336,12 +336,21 @@
     </div>
   </div>
 
-
-
+<section id="opinie" class="section reveal"></section>
 <script src="https://elfsightcdn.com/platform.js" async></script>
 <div class="elfsight-app-1e6aa952-529c-4a27-841d-6d749691a614" data-elfsight-app-lazy></div>
 
+
 </section>
+
+
+
+
+
+</section>
+
+
+
 
 
 
@@ -353,5 +362,6 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
