--- a/folie-ppf.html
+++ b/folie-ppf.html
@@ -100,7 +100,7 @@
   <div class="contact-container">
     <div class="contact-info">
       <h3>Masz pytania?</h3>
-      <p class="contact-desc">Zadzwoń lub odwiedź nas w naszym studiu w Wejherowie.</p>
+      <p class="contact-desc">Zadzwoń lub odwiedź nas w naszym studiu.</p>
       
       <div class="contact-details">
         <div class="detail-item">
@@ -143,7 +143,6 @@
 <script src="script.js"></script>
 </body>
 </html>
-
 
 
 
