--- a/prania-polering.html
+++ b/prania-polering.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pl">
 <head>
@@ -99,7 +98,7 @@
   <div class="contact-container">
     <div class="contact-info">
       <h3>Masz pytania?</h3>
-      <p class="contact-desc">Zadzwoń lub odwiedź nas w naszym studiu w Wejherowie.</p>
+      <p class="contact-desc">Zadzwoń lub odwiedź nas w naszym studiu.</p>
       
       <div class="contact-details">
         <div class="detail-item">
@@ -142,6 +141,8 @@
 <script src="script.js"></script>
 </body>
 </html>
+
+
 
 
 
