--- a/przeglad-powloki.html
+++ b/przeglad-powloki.html
@@ -1,5 +1,6 @@
 
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pl">
 <head>
   <meta charset="UTF-8">
@@ -28,13 +29,24 @@
 <section class="section">
   <h2>Przegląd powłoki ceramicznej</h2>
 
-<div class="image-text-section">
-    <img src="img/zdjecia/przed1.png" alt="Obrazek 1">
-    <div class="middle-text">Kompleksowa kontrola stanu powłoki ochronnej auta połączona z jej oczyszczeniem przy użyciu profesjonalnej chemii. Sprawdzamy integralność warstwy ochronnej, ewentualne ubytki i poziom połysku, zapewniając lakierowi perfekcyjny wygląd i głębię koloru. Zabieg powinien być wykonywany regularnie, w zależności od eksploatacji samochodu, aby utrzymać długotrwałą ochronę.</div>
-    <img src="img/zdjecia/po1.jpeg" alt="Obrazek 2">
-  </div>
+  <div class="video-text-section">
 
+    <video autoplay loop muted playsinline class="video-box">
+      <source src="img/zdjecia/film 1.mp4" type="video/mp4">
+    </video>
+
+    <div class="middle-text">
+      Kompleksowa kontrola stanu powłoki ochronnej auta połączona z jej oczyszczeniem przy użyciu profesjonalnej chemii. Sprawdzamy integralność warstwy ochronnej, ewentualne ubytki i poziom połysku, zapewniając lakierowi perfekcyjny wygląd i głębię koloru. Zabieg powinien być wykonywany regularnie, w zależności od eksploatacji samochodu, aby utrzymać długotrwałą ochronę.
+    </div>
+
+    <video autoplay loop muted playsinline class="video-box">
+      <source src="img/zdjecia/film 2.mp4" type="video/mp4">
+    </video>
+
+  </div>
 </section>
+
+
 
 
 
@@ -128,7 +140,7 @@
   <div class="contact-container">
     <div class="contact-info">
       <h3>Masz pytania?</h3>
-      <p class="contact-desc">Zadzwoń lub odwiedź nas w naszym studiu w Wejherowie.</p>
+      <p class="contact-desc">Zadzwoń lub odwiedź nas w naszym studiu.</p>
       
       <div class="contact-details">
         <div class="detail-item">
