--- a/prania-polering.html
+++ b/prania-polering.html
@@ -23,17 +23,22 @@
   </nav>
 </header>
 
-<section class="section">
-  <h2>Prania, polerowania i powłoki</h2>
+<div class="video-text-section">
 
-<div class="image-text-section">
-    <img src="img/zdjecia/przed1.png" alt="Obrazek 1">
-    <div class="middle-text">Profesjonalne polerowanie lakieru, korekta przy zastosowaniu nowoczesnych środków oraz narzędzi usuwa mikrozarysowania, hologramy, odpryski oraz głębsze zarysowania, przywracając głębię koloru i perfekcyjny połysk. Po każdym polerowaniu nakładany jest wosk ochronny, który dodatkowo zabezpiecza lakier. Opcjonalnie usługę można połączyć z nałożeniem powłoki ochronnej w zależności od wymagań klienta. Oferujemy powłoki ochronne o trwałości od 6 miesięcy do 5 lat, różnego rodzaju – od ceramicznych do elastomerowych, jak również woski o różnej twardości i wytrzymałości, zapewniające elegancki wygląd i długotrwałą ochronę lakieru.</div>
-    <img src="img/zdjecia/po1.jpeg" alt="Obrazek 2">
+    <video autoplay loop muted playsinline class="video-box">
+      <source src="img/zdjecia/film3.mp4" type="video/mp4">
+    </video>
+
+    <div class="middle-text">
+     Profesjonalne polerowanie lakieru, korekta przy zastosowaniu nowoczesnych środków oraz narzędzi usuwa mikrozarysowania, hologramy, odpryski oraz głębsze zarysowania, przywracając głębię koloru i perfekcyjny połysk. Po każdym polerowaniu nakładany jest wosk ochronny, który dodatkowo zabezpiecza lakier. Opcjonalnie usługę można połączyć z nałożeniem powłoki ochronnej w zależności od wymagań klienta. Oferujemy powłoki ochronne o trwałości od 6 miesięcy do 5 lat, różnego rodzaju – od ceramicznych do elastomerowych, jak również woski o różnej twardości i wytrzymałości, zapewniające elegancki wygląd i długotrwałą ochronę lakieru.
+    </div>
+
+    <video autoplay loop muted playsinline class="video-box">
+      <source src="img/zdjecia/film4.mp4" type="video/mp4">
+    </video>
+
   </div>
-
 </section>
-
 
 </body>
 </html>
@@ -141,6 +146,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
