--- a/prania-polering.html
+++ b/prania-polering.html
@@ -23,6 +23,11 @@
   </nav>
 </header>
 
+<section class="section">
+  <h2>Prania, polerowania i powłoki</h2>
+
+
+
 <div class="video-text-section">
 
     <video autoplay loop muted playsinline class="video-box">
@@ -39,6 +44,10 @@
 
   </div>
 </section>
+
+
+
+
 
 </body>
 </html>
@@ -146,6 +155,8 @@
 <script src="script.js"></script>
 </body>
 </html>
+
+
 
 
 
