--- a/mycie.html
+++ b/mycie.html
@@ -45,6 +45,49 @@
 
 
 
+<section class="pricing">
+  <h2 class="pricing-title">Cennik</h2>
+
+  <div class="pricing-table">
+    <div></div>
+    <div class="col-title">mały</div>
+    <div class="col-title">średni</div>
+    <div class="col-title">duży</div>
+
+    <div class="row-title">Mycie:</div>
+    <div>160 zł</div>
+    <div>180 zł</div>
+    <div>200 zł</div>
+
+    <div class="row-desc" colspan="4">
+      * Mycie podstawowe zewnątrz + czernienie opon + zabezpieczenie lakieru płynnym
+      woskiem + mycie szyb zewnątrz
+    </div>
+
+    <div class="row-title">Mycie detailingowe:</div>
+    <div>400 zł</div>
+    <div>450 zł</div>
+    <div>500 zł</div>
+
+    <div class="row-desc">
+      * Mycie karoserii z dbałością o każdy detal + czernienie opon oraz elementów
+      plastikowych + zabezpieczenie lakieru woskiem + mycie szyb zewnątrz
+    </div>
+
+    <div class="row-title">Komplet:</div>
+    <div>300 zł</div>
+    <div>320 zł</div>
+    <div>380 zł</div>
+
+    <div class="row-desc">
+      * Mycie podstawowe zewnątrz + czernienie opon + zabezpieczenie lakieru woskiem +
+      mycie szyb zew/wewn + czyszczenie plastików
+    </div>
+  </div>
+</section>
+
+
+
 
 
 
@@ -127,6 +170,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
