--- a/mycie.html
+++ b/mycie.html
@@ -44,45 +44,50 @@
 
 
 
-
 <section class="pricing">
   <h2 class="pricing-title">Cennik</h2>
 
   <div class="pricing-table">
+
+    <!-- NAGŁÓWKI KOLUMN (DESKTOP) -->
     <div></div>
     <div class="col-title">mały</div>
     <div class="col-title">średni</div>
     <div class="col-title">duży</div>
 
+    <!-- MYCIE -->
     <div class="row-title">Mycie:</div>
-    <div>160 zł</div>
-    <div>180 zł</div>
-    <div>200 zł</div>
+    <div class="price" data-size="mały">160 zł</div>
+    <div class="price" data-size="średni">180 zł</div>
+    <div class="price" data-size="duży">200 zł</div>
 
-    <div class="row-desc" colspan="4">
+    <div class="row-desc">
       * Mycie podstawowe zewnątrz + czernienie opon + zabezpieczenie lakieru płynnym
       woskiem + mycie szyb zewnątrz
     </div>
 
+    <!-- DETAILING -->
     <div class="row-title">Mycie detailingowe:</div>
-    <div>400 zł</div>
-    <div>450 zł</div>
-    <div>500 zł</div>
+    <div class="price" data-size="mały">400 zł</div>
+    <div class="price" data-size="średni">450 zł</div>
+    <div class="price" data-size="duży">500 zł</div>
 
     <div class="row-desc">
       * Mycie karoserii z dbałością o każdy detal + czernienie opon oraz elementów
       plastikowych + zabezpieczenie lakieru woskiem + mycie szyb zewnątrz
     </div>
 
+    <!-- KOMPLET -->
     <div class="row-title">Komplet:</div>
-    <div>300 zł</div>
-    <div>320 zł</div>
-    <div>380 zł</div>
+    <div class="price" data-size="mały">300 zł</div>
+    <div class="price" data-size="średni">320 zł</div>
+    <div class="price" data-size="duży">380 zł</div>
 
     <div class="row-desc">
       * Mycie podstawowe zewnątrz + czernienie opon + zabezpieczenie lakieru woskiem +
       mycie szyb zew/wewn + czyszczenie plastików
     </div>
+
   </div>
 </section>
 
@@ -170,6 +175,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
