--- a/detailing-wnetrze.html
+++ b/detailing-wnetrze.html
@@ -51,6 +51,64 @@
 
 
 
+<section class="pricing">
+  <h2 class="pricing-title">Cennik</h2>
+
+  <div class="pricing-table">
+
+    <!-- NAGŁÓWKI KOLUMN (DESKTOP) -->
+    <div></div>
+    <div class="col-title">mały</div>
+    <div class="col-title">średni</div>
+    <div class="col-title">duży</div>
+
+    <!-- MYCIE -->
+    <div class="row-title">Czyszczenie wnętrza:</div>
+    <div class="price" data-size="mały">570 zł</div>
+    <div class="price" data-size="średni">670 zł</div>
+    <div class="price" data-size="duży">770 zł</div>
+
+    <div class="row-desc">
+      * Mycie szyb zew/wewn + detailingowe czyszczenie plastików
+       + odkurzanie wnętrza + odświeżenie dywaników
+    </div>
+
+    <!-- DETAILING -->
+    <div class="row-title">Detailing wnętrza premium:</div>
+    <div class="price" data-size="mały">900 zł</div>
+    <div class="price" data-size="średni">1000 zł</div>
+    <div class="price" data-size="duży">1200 zł</div>
+
+    <div class="row-desc">
+      * Kompleksowe czyszczenie wnętrza, odkurzanie,pranie,czyszczenie
+      schodków, oraz kanałów wentylacyjnych. Impregnowanie elementów plastikowych
+      oraz tapicerek. Mycie oraz impregnowanie szyb.
+    </div>
+
+    <!-- KOMPLET -->
+    <div class="row-title">Odkurzanie wnętrza:</div>
+    <div class="price" data-size="mały">100 zł</div>
+    <div class="price" data-size="średni">120 zł</div>
+    <div class="price" data-size="duży">140 zł</div>
+
+    <div class="row-desc">
+   
+    </div>
+    <div class="row-title">Odkurzanie + czyszczenie wnętrza(pulpit + boczki):</div>
+    <div class="price" data-size="mały">200 zł</div>
+    <div class="price" data-size="średni">220 zł</div>
+    <div class="price" data-size="duży">240 zł</div>
+    
+
+    <div class="row-desc">
+ 
+    </div>
+    
+
+  </div>
+</section>
+
+
 
 
 
@@ -140,6 +198,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
