--- a/pranie-tapicerki.html
+++ b/pranie-tapicerki.html
@@ -48,6 +48,91 @@
 
 
 
+<section class="pricing">
+  <h2 class="pricing-title">Cennik</h2>
+
+  <div class="pricing-table">
+
+    <!-- NAGŁÓWKI KOLUMN (DESKTOP) -->
+    <div></div>
+    <div class="col-title">mały</div>
+    <div class="col-title">średni</div>
+    <div class="col-title">duży</div>
+
+    <!-- MYCIE -->
+    <div class="row-title">Pranie podsufitki:</div>
+    <div class="price" data-size="mały">od 100 zł</div>
+    <div class="price" data-size="średni">od 100 zł</div>
+    <div class="price" data-size="duży">od 100 zł</div>
+
+    <div class="row-desc">
+    </div>
+
+    <!-- DETAILING -->
+    <div class="row-title">Pranie foteli:</div>
+    <div class="price" data-size="mały">od 120 zł</div>
+    <div class="price" data-size="średni">od 120 zł</div>
+    <div class="price" data-size="duży">od 120 zł</div>
+
+    <div class="row-desc">
+    </div>
+
+    <!-- KOMPLET -->
+    <div class="row-title">Pranie tylnej kanapy:</div>
+    <div class="price" data-size="mały">od 120 zł</div>
+    <div class="price" data-size="średni">od 150 zł</div>
+    <div class="price" data-size="duży">od 150 zł</div>
+
+    <div class="row-desc">
+    </div>
+
+     <div class="row-title">Pranie wykładzin:</div>
+    <div class="price" data-size="mały">od 250 zł</div>
+    <div class="price" data-size="średni">od 300 zł</div>
+    <div class="price" data-size="duży">od 400 zł</div>
+
+    <div class="row-desc">
+    </div>
+
+     <div class="row-title">Pranie Dywanów:</div>
+    <div class="price" data-size="mały">od 100 zł</div>
+    <div class="price" data-size="średni">od 100 zł</div>
+    <div class="price" data-size="duży">od 120 zł</div>
+
+    <div class="row-desc">
+    </div>
+
+    <div class="row-title">Pranie wykładzin bagażnika:</div>
+    <div class="price" data-size="mały">od 120 zł</div>
+    <div class="price" data-size="średni">od 180 zł</div>
+    <div class="price" data-size="duży">od 240 zł</div>
+
+    <div class="row-desc">
+    </div>
+
+    <div class="row-title">Kompleksowe pranie:</div>
+    <div class="price" data-size="mały">od 600 zł</div>
+    <div class="price" data-size="średni">od 700 zł</div>
+    <div class="price" data-size="duży">od 800 zł</div>
+
+    <div class="row-desc">
+      * Kompleksowe pranie wnętrza całego pojazdu + odkurzanie
+      (fotele,podsufitówka,bagażnik,wykładziny, dywaniki)
+    </div>
+
+
+  </div>
+</section>
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -138,6 +223,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
