--- a/mycie.html
+++ b/mycie.html
@@ -85,7 +85,7 @@
 
     <div class="row-desc">
       * Mycie podstawowe zewnątrz + czernienie opon + zabezpieczenie lakieru woskiem +
-      mycie szyb zew/wewn + czyszczenie plastików
+      mycie szyb zew/wewn + czyszczenie plastików + odkurzanie wnętrza
     </div>
 
   </div>
@@ -175,6 +175,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
