--- a/folie-ppf.html
+++ b/folie-ppf.html
@@ -57,6 +57,95 @@
 
 
 
+<section class="pricing">
+  <h2 class="pricing-title">Cennik</h2>
+
+  <div class="pricing-table">
+
+    <!-- NAGŁÓWKI KOLUMN (DESKTOP) -->
+    <div></div>
+    <div class="col-title"></div>
+    <div class="col-title">Wycena indywidualna</div>
+    <div class="col-title"></div>
+
+    <!-- MYCIE -->
+    <div class="row-title">Folia ochronna - Full Front:</div>
+    <div class="price" data-size=""></div>
+    <div class="price" data-size="">od 5000-6200</div>
+    <div class="price" data-size=""></div>
+
+    <div class="row-desc">
+    </div>
+
+    <!-- DETAILING -->
+    <div class="row-title">Pakiet- Ultimate:</div>
+    <div class="price" data-size=""></div>
+    <div class="price" data-size="">od 6700-8400</div>
+    <div class="price" data-size=""></div>
+
+    <div class="row-desc">
+      * Full front + powłoka ceramiczna
+    </div>
+
+    <!-- KOMPLET -->
+    <div class="row-title">Full body PPF:</div>
+    <div class="price" data-size=""></div>
+    <div class="price" data-size="">od 12.500</div>
+    <div class="price" data-size=""></div>
+
+    <div class="row-desc">
+      * Oklejenie w całości
+    </div>
+
+    <div class="row-title">Full body MATTE PPF:</div>
+    <div class="price" data-size=""></div>
+    <div class="price" data-size="">od 14.500</div>
+    <div class="price" data-size=""></div>
+
+    <div class="row-desc">
+      * Oklejenie w całości
+    </div>
+
+    <div class="row-title">Folia zmiennokolorowa PPF:</div>
+    <div class="price" data-size=""></div>
+    <div class="price" data-size="">od 17.000</div>
+    <div class="price" data-size=""></div>
+
+    <div class="row-desc">
+    </div>
+
+    <div class="row-title">Pakiet:</div>
+    <div class="price" data-size=""></div>
+    <div class="price" data-size="">od 3200-4500</div>
+    <div class="price" data-size=""></div>
+
+    <div class="row-desc">
+      * MINI- Maska, Zderzak, Reflektory, Lusterka
+    </div>
+
+
+
+    <div class="row-title">Na monitor:</div>
+    <div class="price" data-size=""></div>
+    <div class="price" data-size="">od 180-350</div>
+    <div class="price" data-size=""></div>
+
+    <div class="row-desc">
+      * Folia ochronna na monitor radia samochodu Połysk lub Matowa
+    </div>
+
+  </div>
+</section>
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -143,6 +232,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
