--- a/mycie.html
+++ b/mycie.html
@@ -88,7 +88,13 @@
       mycie szyb zew/wewn + czyszczenie plastików + odkurzanie wnętrza
     </div>
 
+    <div class="row-desc">
+      
+    </div>
+
   </div>
+
+   <h5>Podane ceny są cenami brutto</h5>
 </section>
 
 
@@ -175,6 +181,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
