--- a/detailing-wnetrze.html
+++ b/detailing-wnetrze.html
@@ -103,9 +103,14 @@
     <div class="row-desc">
  
     </div>
+     <div class="row-desc">
+ 
+    </div>
     
 
   </div>
+
+    <h5>Podane ceny są cenami brutto</h5>
 </section>
 
 
@@ -198,6 +203,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
