--- a/folie-ppf.html
+++ b/folie-ppf.html
@@ -134,7 +134,13 @@
       * Folia ochronna na monitor radia samochodu Połysk lub Matowa
     </div>
 
+     <div class="row-desc">
+      
+    </div>
+
   </div>
+
+    <h5>Podane ceny są cenami brutto</h5>
 </section>
 
 
@@ -232,6 +238,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
