--- a/pranie-tapicerki.html
+++ b/pranie-tapicerki.html
@@ -119,9 +119,13 @@
       * Kompleksowe pranie wnętrza całego pojazdu + odkurzanie
       (fotele,podsufitówka,bagażnik,wykładziny, dywaniki)
     </div>
+    <div class="row-desc">
+     
+    </div>
 
 
   </div>
+   <h5>Podane ceny są cenami brutto</h5>
 </section>
 
 
@@ -223,6 +227,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
