--- a/detailing-wnetrze.html
+++ b/detailing-wnetrze.html
@@ -81,7 +81,7 @@
 
     <div class="row-desc">
       * Kompleksowe czyszczenie wnętrza, odkurzanie,pranie,czyszczenie
-      schodków, oraz kanałów wentylacyjnych. Impregnowanie elementów plastikowych
+      schowków, oraz kanałów wentylacyjnych. Impregnowanie elementów plastikowych
       oraz tapicerek. Mycie oraz impregnowanie szyb.
     </div>
 
@@ -203,6 +203,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
