--- a/prania-polering.html
+++ b/prania-polering.html
@@ -72,6 +72,88 @@
 
 
 
+<section class="pricing">
+  <h2 class="pricing-title">Cennik</h2>
+
+  <div class="pricing-table">
+
+    <!-- NAGŁÓWKI KOLUMN (DESKTOP) -->
+    <div></div>
+    <div class="col-title">mały</div>
+    <div class="col-title">średni</div>
+    <div class="col-title">duży</div>
+
+    <!-- 1. PEŁNA KOREKTA -->
+    <div class="row-title">Pełna korekta lakieru:</div>
+    <div class="price" data-size="mały">od 2000 zł</div>
+    <div class="price" data-size="średni">od 2200 zł</div>
+    <div class="price" data-size="duży">od 2400 zł</div>
+
+    <div class="row-desc">
+      * Mycie detailingowe + dekontaminacja lakieru + trzyetapowa korekta lakieru +
+      zabezpieczenie lakieru woskiem, usunięcie od 90%–100% rys.
+    </div>
+
+    <!-- 2. POWŁOKA OCHRONNA -->
+    <div class="row-title">Zabezpieczenie lakieru powłoką ochronną:</div>
+    <div class="price" data-size="mały">od 1250 zł</div>
+    <div class="price" data-size="średni">———</div>
+    <div class="price" data-size="duży">do 4500 zł</div>
+
+    <div class="row-desc">
+      * Mycie detailingowe + pełna korekta lakieru + przygotowanie do zabezpieczenia
+      lakieru powłoką ochronną + aplikacja powłoki ochronnej na lakier.
+      W pakiecie zabezpieczenie szyb, lamp, elementów plastikowych oraz felg.
+    </div>
+
+    <!-- 3. LAMPY -->
+    <div class="row-title">Polerowanie – szlifowanie lamp:</div>
+    <div class="price" data-size="mały">cena uniwersalna</div>
+    <div class="price" data-size="średni">350 zł</div>
+    <div class="price" data-size="duży"></div>
+
+    <div class="row-desc">
+      * Polerowanie – szlifowanie lamp + aplikacja powłoki ochronnej na lampy
+    </div>
+
+    <!-- 4. SZLIFOWANIE LAKIERU -->
+    <div class="row-title">Szlifowanie lakieru – usuwanie mory lakierniczej:</div>
+    <div class="price" data-size="mały">od 300 zł</div>
+    <div class="price" data-size="średni">od 350 zł</div>
+    <div class="price" data-size="duży">od 350 zł</div>
+
+    <div class="row-desc">
+      * Usuwanie mory lakierniczej + polerowanie lakieru
+    </div>
+
+    <!-- 5. WNĘTRZE -->
+    <div class="row-title">Polerowanie lakierowanych elementów wnętrza samochodu:</div>
+    <div class="price" data-size="mały"></div>
+    <div class="price" data-size="średni">Wycena indywidualna</div>
+    <div class="price" data-size="duży"></div>
+
+    <div class="row-desc">
+      * Polerowanie elementów piano black i innych lakierowanych powierzchni wnętrza
+    </div>
+
+  </div>
+
+  <h5>Podane ceny są cenami brutto</h5>
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -155,6 +237,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
