--- a/prania-polering.html
+++ b/prania-polering.html
@@ -96,9 +96,9 @@
 
     <!-- 2. POWŁOKA OCHRONNA -->
     <div class="row-title">Zabezpieczenie lakieru powłoką ochronną:</div>
-    <div class="price" data-size="mały">od 1250 zł</div>
-    <div class="price" data-size="średni">———</div>
-    <div class="price" data-size="duży">do 4500 zł</div>
+    <div class="price" data-size="">od 1250 zł</div>
+    <div class="price" data-size="">———</div>
+    <div class="price" data-size="">do 4500 zł</div>
 
     <div class="row-desc">
       * Mycie detailingowe + pełna korekta lakieru + przygotowanie do zabezpieczenia
@@ -108,9 +108,9 @@
 
     <!-- 3. LAMPY -->
     <div class="row-title">Polerowanie – szlifowanie lamp:</div>
-    <div class="price" data-size="mały">cena uniwersalna</div>
-    <div class="price" data-size="średni">350 zł</div>
-    <div class="price" data-size="duży"></div>
+    <div class="price" data-size="">cena uniwersalna</div>
+    <div class="price" data-size="">350 zł</div>
+    <div class="price" data-size=""></div>
 
     <div class="row-desc">
       * Polerowanie – szlifowanie lamp + aplikacja powłoki ochronnej na lampy
@@ -128,9 +128,9 @@
 
     <!-- 5. WNĘTRZE -->
     <div class="row-title">Polerowanie lakierowanych elementów wnętrza samochodu:</div>
-    <div class="price" data-size="mały"></div>
-    <div class="price" data-size="średni">Wycena indywidualna</div>
-    <div class="price" data-size="duży"></div>
+    <div class="price" data-size=""></div>
+    <div class="price" data-size="">Wycena indywidualna</div>
+    <div class="price" data-size=""></div>
 
     <div class="row-desc">
       * Polerowanie elementów piano black i innych lakierowanych powierzchni wnętrza
@@ -237,6 +237,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
