--- a/prania-polering.html
+++ b/prania-polering.html
@@ -64,14 +64,6 @@
 
 
 
-
-
-
-
-
-
-
-
 <section class="pricing">
   <h2 class="pricing-title">Cennik</h2>
 
@@ -96,9 +88,9 @@
 
     <!-- 2. POWŁOKA OCHRONNA -->
     <div class="row-title">Zabezpieczenie lakieru powłoką ochronną:</div>
-    <div class="price" data-size="">od 1250 zł</div>
-    <div class="price" data-size="">———</div>
-    <div class="price" data-size="">do 4500 zł</div>
+    <div class="price" data-size="mały">od 1250 zł</div>
+    <div class="price" data-size="średni">———</div>
+    <div class="price" data-size="duży">do 4500 zł</div>
 
     <div class="row-desc">
       * Mycie detailingowe + pełna korekta lakieru + przygotowanie do zabezpieczenia
@@ -108,9 +100,9 @@
 
     <!-- 3. LAMPY -->
     <div class="row-title">Polerowanie – szlifowanie lamp:</div>
-    <div class="price" data-size="">cena uniwersalna</div>
-    <div class="price" data-size="">350 zł</div>
-    <div class="price" data-size=""></div>
+    <div class="price" data-size="mały">cena uniwersalna</div>
+    <div class="price" data-size="średni">350 zł</div>
+    <div class="price" data-size="duży"></div>
 
     <div class="row-desc">
       * Polerowanie – szlifowanie lamp + aplikacja powłoki ochronnej na lampy
@@ -128,9 +120,9 @@
 
     <!-- 5. WNĘTRZE -->
     <div class="row-title">Polerowanie lakierowanych elementów wnętrza samochodu:</div>
-    <div class="price" data-size=""></div>
-    <div class="price" data-size="">Wycena indywidualna</div>
-    <div class="price" data-size=""></div>
+    <div class="price" data-size="mały"></div>
+    <div class="price" data-size="średni">Wycena indywidualna</div>
+    <div class="price" data-size="duży"></div>
 
     <div class="row-desc">
       * Polerowanie elementów piano black i innych lakierowanych powierzchni wnętrza
@@ -140,13 +132,6 @@
 
   <h5>Podane ceny są cenami brutto</h5>
 </section>
-
-
-
-
-
-
-
 
 
 
@@ -237,9 +222,6 @@
 <script src="script.js"></script>
 </body>
 </html>
-
-
-
 
 
 
