--- a/index.html
+++ b/index.html
@@ -241,6 +241,34 @@
 
 
 
+<a href="sprzedaz.html" class="premium-tile">
+
+  <!-- TŁO / OBRAZEK -->
+  <div class="tile-bg" style="background-image: url('img/zdjecia/gallery14.jpeg');"></div>
+
+  <!-- CIEMNA NAKŁADKA -->
+  <div class="tile-overlay"></div>
+
+  <!-- TREŚĆ -->
+  <div class="tile-content">
+    <h3>Przygotowanie samochodu do sprzedaży</h3>
+
+    <p>
+      "Profesjonalne przygotowanie auta do sprzedaży – czysto, 
+      estetycznie i atrakcyjnie dla kupującego.""
+    </p>
+
+    <!-- CTA NA ŚRODKU -->
+    <div class="tile-cta">
+      <span>ODKRYJ</span>
+      <span class="arrow">→</span>
+    </div>
+  </div>
+
+</a>
+
+
+
 
 
 </div>
@@ -362,6 +390,4 @@
 <script src="script.js"></script>
 </body>
 </html>
-
-
 
