--- a/folie-ppf.html
+++ b/folie-ppf.html
@@ -47,16 +47,6 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
 <section class="pricing">
   <h2 class="pricing-title">Cennik</h2>
 
@@ -71,7 +61,7 @@
     <!-- MYCIE -->
     <div class="row-title">Folia ochronna - Full Front:</div>
     <div class="price" data-size=""></div>
-    <div class="price" data-size="">od 5000-6200</div>
+    <div class="price" data-size="">od 5000zł-6200zł</div>
     <div class="price" data-size=""></div>
 
     <div class="row-desc">
@@ -80,7 +70,7 @@
     <!-- DETAILING -->
     <div class="row-title">Pakiet- Ultimate:</div>
     <div class="price" data-size=""></div>
-    <div class="price" data-size="">od 6700-8400</div>
+    <div class="price" data-size="">od 6700zł-8400zł</div>
     <div class="price" data-size=""></div>
 
     <div class="row-desc">
@@ -90,7 +80,7 @@
     <!-- KOMPLET -->
     <div class="row-title">Full body PPF:</div>
     <div class="price" data-size=""></div>
-    <div class="price" data-size="">od 12.500</div>
+    <div class="price" data-size="">od 12.500zł</div>
     <div class="price" data-size=""></div>
 
     <div class="row-desc">
@@ -99,7 +89,7 @@
 
     <div class="row-title">Full body MATTE PPF:</div>
     <div class="price" data-size=""></div>
-    <div class="price" data-size="">od 14.500</div>
+    <div class="price" data-size="">od 14.500zł</div>
     <div class="price" data-size=""></div>
 
     <div class="row-desc">
@@ -108,7 +98,7 @@
 
     <div class="row-title">Folia zmiennokolorowa PPF:</div>
     <div class="price" data-size=""></div>
-    <div class="price" data-size="">od 17.000</div>
+    <div class="price" data-size="">od 17.000zł</div>
     <div class="price" data-size=""></div>
 
     <div class="row-desc">
@@ -116,7 +106,7 @@
 
     <div class="row-title">Pakiet:</div>
     <div class="price" data-size=""></div>
-    <div class="price" data-size="">od 3200-4500</div>
+    <div class="price" data-size="">od 3200-4500zł</div>
     <div class="price" data-size=""></div>
 
     <div class="row-desc">
@@ -127,21 +117,22 @@
 
     <div class="row-title">Na monitor:</div>
     <div class="price" data-size=""></div>
-    <div class="price" data-size="">od 180-350</div>
+    <div class="price" data-size="">od 180zł-350zł</div>
     <div class="price" data-size=""></div>
 
     <div class="row-desc">
       * Folia ochronna na monitor radia samochodu Połysk lub Matowa
     </div>
 
-     <div class="row-desc">
-      
+    <div class="row-desc">
     </div>
 
   </div>
 
-    <h5>Podane ceny są cenami brutto</h5>
+  <h5>Podane ceny są cenami brutto</h5>
 </section>
+
+
 
 
 
@@ -238,9 +229,6 @@
 <script src="script.js"></script>
 </body>
 </html>
-
-
-
 
 
 
