--- a/sprzedaz.html
+++ b/sprzedaz.html
@@ -46,6 +46,59 @@
 
 
 
+<section class="pricing">
+  <h2 class="pricing-title">Cennik</h2>
+
+  <div class="pricing-table">
+
+    <!-- NAGŁÓWKI KOLUMN (DESKTOP) -->
+    <div></div>
+    <div class="col-title"></div>
+    <div class="col-title"></div>
+    <div class="col-title"></div>
+
+    <!-- MYCIE -->
+    <div class="row-title">Przygotowanie samochodu do sprzedaży:</div>
+    <div class="price" data-size="">od 700 zł</div>
+    <div class="price" data-size="">———</div>
+    <div class="price" data-size="">do 1700 zł</div>
+
+    <div class="row-desc">
+     * Mycie detailingowe + dekontaminacja lakieru + korekta lakieru
+     + pranie tapicerki + detailingowe czyszczenie wnętrza + mycie szyb 
+     +zabezpieczenie lakieru woskiem
+    </div>
+
+    
+     <div class="row-desc">
+ 
+    </div>
+    
+
+  </div>
+<h5>Cena uzależniona od stanu pojazdu oraz stopnia jego zabrudzenia</h5>
+  <h5>Podane ceny są cenami brutto</h5>
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
