--- a/pranie-tapicerki.html
+++ b/pranie-tapicerki.html
@@ -23,19 +23,38 @@
   </nav>
 </header>
 
+
+
+
 <section class="section">
   <h2>Pranie tapicerek</h2>
 
-<div class="image-text-section">
-    <img src="img/zdjecia/przed1.png" alt="Obrazek 1">
-    <div class="middle-text">Profesjonalne pranie tapicerki samochodowej przy użyciu specjalistycznych detergentów i technologii ekstrakcyjnej. Skutecznie usuwamy plamy, zabrudzenia i nieprzyjemne zapachy, przywracając materiałom świeżość i naturalny wygląd. Zabieg kończymy impregnacją tkanin lub skóry, zapewniając wnętrzu luksusowy wygląd i ochronę na dłużej.</div>
-    <img src="img/zdjecia/po1.jpeg" alt="Obrazek 2">
+  <div class="image-text-section">
+
+   <div class="slider sub-slider">
+  <img src="img/11.png" class="slide active" alt="">
+  <img src="img/13.png" class="slide" alt="">
+</div>
+
+
+
+    <div class="middle-text">
+      Profesjonalne pranie tapicerki samochodowej przy użyciu
+      specjalistycznych detergentów i technologii ekstrakcyjnej.
+      Skutecznie usuwamy plamy, zabrudzenia i nieprzyjemne zapachy,
+      przywracając materiałom świeżość i naturalny wygląd.
+      Zabieg kończymy impregnacją tkanin lub skóry.
+    </div>
+
+    <div class="slider sub-slider">
+  <img src="img/14.png" class="slide active">
+  <img src="img/15.png" class="slide">
+  <img src="img/16.png" class="slide">
+</div>
+
+
   </div>
-
 </section>
-
-</body>
-</html>
 
 
 
@@ -222,14 +241,6 @@
 <script src="script.js"></script>
 </body>
 </html>
-
-
-
-
-
-
-
-
 
 
 
