--- a/przeglad-powloki.html
+++ b/przeglad-powloki.html
@@ -27,7 +27,7 @@
 </header>
 
 <section class="section">
-  <h2>Przegląd powłoki ceramicznej</h2>
+  <h2>Przegląd powłoki ochronnej</h2>
 
   <div class="video-text-section">
 
@@ -96,7 +96,7 @@
     <div class="col-title">duży</div>
 
     <!-- MYCIE -->
-    <div class="row-title">Przegląd powłkoki ceramicznej:</div>
+    <div class="row-title">Przegląd powłkoki ochronnej:</div>
     <div class="price" data-size="mały">600 zł</div>
     <div class="price" data-size="średni">650 zł</div>
     <div class="price" data-size="duży">700 zł</div>
@@ -221,6 +221,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
