--- a/prania-polering.html
+++ b/prania-polering.html
@@ -24,7 +24,7 @@
 </header>
 
 <section class="section">
-  <h2>Prania, polerowania i powłoki</h2>
+  <h2>Polerowanie i powłoki</h2>
 
 
 
@@ -222,6 +222,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
