--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
     <h3>Przegląd Powłoki Ochronnej</h3>
 
     <p>
-      „Regularny przegląd powłoki ceramicznej to gwarancja 
+      „Regularny przegląd powłoki ochronnej to gwarancja 
       jej pełnej wydajności, połysku i długotrwałej ochrony.”
     </p>
 
@@ -390,4 +390,5 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
