--- a/index.html
+++ b/index.html
@@ -244,7 +244,8 @@
 <a href="sprzedaz.html" class="premium-tile">
 
   <!-- TŁO / OBRAZEK -->
-  <div class="tile-bg" style="background-image: url('img/zdjecia/gallery14.jpeg');"></div>
+  <div class="tile-bg" style="background-image: url('img/WhatsApp\ Image\ 2026-01-22\ at\ 14.21.21.jpeg');"></div>
+
 
   <!-- CIEMNA NAKŁADKA -->
   <div class="tile-overlay"></div>
@@ -390,5 +391,6 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
