--- a/sprzedaz.html
+++ b/sprzedaz.html
@@ -77,6 +77,7 @@
 
   </div>
 <h5>Cena uzależniona od stanu pojazdu oraz stopnia jego zabrudzenia</h5>
+  <h5>Zakres wykonywanych prac ustalamy po dostarczeniu pojazdu </h5>
   <h5>Podane ceny są cenami brutto</h5>
 </section>
 
