--- a/sprzedaz.html
+++ b/sprzedaz.html
@@ -23,10 +23,20 @@
   </nav>
 </header>
 
+
+
+
+
 <section class="section">
   <h2>Przygotowanie samochodu do sprzedaży</h2>
-</section>
 
+<div class="image-text-section">
+    <img src="img/zdjecia/gallery7.jpeg" alt="Obrazek 1">
+    <div class="middle-text">Zadbamy o to, aby Twój samochód zrobił świetne pierwsze wrażenie i sprzedał się szybciej – oraz drożej. Kompleksowo przygotowujemy auta do sprzedaży: od dokładnego czyszczenia wnętrza, przez odświeżenie lakieru, aż po detale, które decydują o odbiorze pojazdu przez kupującego. Dzięki profesjonalnemu przygotowaniu zwiększasz atrakcyjność auta, zyskujesz przewagę nad innymi ogłoszeniami i oszczędzasz czas na negocjacjach.</div>
+    <img src="img/zdjecia/mycie.jpeg" alt="Obrazek 2">
+  </div>
+
+</section>
 
 
 
@@ -77,7 +87,7 @@
 
   </div>
 <h5>Cena uzależniona od stanu pojazdu oraz stopnia jego zabrudzenia</h5>
-  <h5>Zakres wykonywanych prac ustalamy po dostarczeniu pojazdu </h5>
+<h5>Zakres wykonywanych prac ustalamy po dostarczeniu pojazdu </h5>
   <h5>Podane ceny są cenami brutto</h5>
 </section>
 
