--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <!-- ===== OFERTA ===== -->
 <section id="oferta" class="section reveal">
-  <h2>Oferta</h2>
+  <h2 class="pill-title">Oferta</h2>
   <div class="offers-grid">
   
 
@@ -324,7 +324,8 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
 <section id="kontakt" class="section reveal">
-  <h2>Kontakt</h2>
+ <h2 class="pill-title">Kontakt</h2>
+
   
   <div class="contact-container">
     <div class="contact-info">
@@ -365,6 +366,7 @@
     </div>
   </div>
 
+
 <section id="opinie" class="section reveal"></section>
 <script src="https://elfsightcdn.com/platform.js" async></script>
 <div class="elfsight-app-1e6aa952-529c-4a27-841d-6d749691a614" data-elfsight-app-lazy></div>
@@ -391,6 +393,5 @@
 <script src="script.js"></script>
 </body>
 </html>
-
 
 
