--- a/sprzedaz.html
+++ b/sprzedaz.html
@@ -27,19 +27,36 @@
 
 
 
+
 <section class="section">
   <h2>Przygotowanie samochodu do sprzedaży</h2>
 
-<div class="image-text-section">
-    <img src="img/zdjecia/gallery7.jpeg" alt="Obrazek 1">
-    <div class="middle-text">Zadbamy o to, aby Twój samochód zrobił świetne pierwsze wrażenie i sprzedał się szybciej – oraz drożej. Kompleksowo przygotowujemy auta do sprzedaży: od dokładnego czyszczenia wnętrza, przez odświeżenie lakieru, aż po detale, które decydują o odbiorze pojazdu przez kupującego. Dzięki profesjonalnemu przygotowaniu zwiększasz atrakcyjność auta, zyskujesz przewagę nad innymi ogłoszeniami i oszczędzasz czas na negocjacjach.</div>
-    <img src="img/zdjecia/mycie.jpeg" alt="Obrazek 2">
+  <div class="image-text-section">
+
+   <div class="slider sub-slider">
+  <img src="img/zdjecia/sprz.jpeg" class="slide active" alt="">
+  <img src="img/zdjecia/sprz2.jpeg" class="slide" alt="">
+  <img src="img/zdjecia/sprz3.jpeg" class="slide" alt="">
+  <img src="img/zdjecia/sprz5.jpeg" class="slide" alt="">
+</div>
+
+
+
+    <div class="middle-text">
+      Zadbamy o to, aby Twój samochód zrobił świetne pierwsze wrażenie i sprzedał się szybciej – oraz drożej. Kompleksowo przygotowujemy auta do sprzedaży: od dokładnego czyszczenia wnętrza, przez odświeżenie lakieru, aż po detale, które decydują o odbiorze pojazdu przez kupującego. Dzięki profesjonalnemu przygotowaniu zwiększasz atrakcyjność auta, zyskujesz przewagę nad innymi ogłoszeniami i oszczędzasz czas na negocjacjach.
+    </div>
+
+    <div class="slider sub-slider">
+  <img src="img/14.png" class="slide active">
+  <img src="img/15.png" class="slide">
+  <img src="img/16.png" class="slide">
+  <img src="img/11.png" class="slide" alt="">
+  <img src="img/13.png" class="slide" alt="">
+</div>
+
+
   </div>
-
 </section>
-
-
-
 
 
 
