--- a/folie-ppf.html
+++ b/folie-ppf.html
@@ -24,13 +24,13 @@
   </nav>
 </header>
 
+
 <section class="section">
   <h2>Folie ochronne PPF</h2>
 
 <div class="image-text-section">
-    <img src="img/zdjecia/przed1.png" alt="Obrazek 1">
+    <img src="img/zdjecia/folie ppf.jpeg" alt="Obrazek 1">
     <div class="middle-text">Profesjonalne zabezpieczenie lakieru bezbarwną folią ochronną (PPF – Paint Protection Film), chroniącą przed odpryskami, zarysowaniami i drobnymi uszkodzeniami mechanicznymi. Folia przywraca głębię koloru i połysk, zachowując naturalny wygląd auta. Usługę można zastosować nie tylko na karoserii, ale także na reflektorach, klamkach, lusterkach i innych elementach narażonych na uszkodzenia. Opcjonalnie folię można połączyć z powłokami ochronnymi lub woskami, aby maksymalnie wydłużyć ochronę lakieru i utrzymać luksusowy efekt wizualny.</div>
-    <img src="img/zdjecia/po1.jpeg" alt="Obrazek 2">
   </div>
 
 </section>
@@ -229,6 +229,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
