--- a/index.html
+++ b/index.html
@@ -304,9 +304,11 @@
         <div class="swiper-slide"><img src="img/zdjecia/gallery9.jpeg" alt="Projekt 14"></div>
         <div class="swiper-slide"><img src="img/zdjecia/gallery11.jpeg" alt="Projekt 15"></div>
         <div class="swiper-slide"><img src="img/zdjecia/gallery1.jpeg" alt="Projekt 16"></div>
-        <div class="swiper-slide"><img src="img/zdjecia/gallery10.jpeg" alt="Projekt 17"></div> a
-        <div class="swiper-slide"><img src="img/zdjecia/gallery3.jpeg" alt="Projekt 18"></div> a
-        <div class="swiper-slide"><img src="img/zdjecia/gallery5.jpeg" alt="Projekt 19"></div> a
+        <div class="swiper-slide"><img src="img/zdjecia/gallery10.jpeg" alt="Projekt 17"></div> 
+        <div class="swiper-slide"><img src="img/zdjecia/gallery3.jpeg" alt="Projekt 18"></div> 
+        <div class="swiper-slide"><img src="img/zdjecia/gallery5.jpeg" alt="Projekt 19"></div> 
+         <div class="swiper-slide"><img src="img/zdjecia/sprz.jpeg" alt="Projekt 19"></div> 
+        <div class="swiper-slide"><img src="img/zdjecia/sprz2.jpeg" alt="Projekt 19"></div> 
 
       </div>
 
@@ -393,5 +395,6 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
